# Ultramarin

./: .gitignore  DATA.md  DeepLOB.ipynb  README.md  allmodels.ipynb  benchmark_results.csv  bps_comparison_ADAUSDT.csv  bps_comparison_BTCUSDT.csv  bps_comparison_DOGEUSDT.csv  bps_comparison_ETHUSDT.csv  bps_comparison_LTCUSDT.csv  bps_comparison_SOLUSDT.csv  bps_comparison_XRPUSDT.csv  bps_comparison_all_assets.csv  capping.ipynb  deeplob_multi_output.ipynb  direct_bps.ipynb  direct_bps_pooled.ipynb  eval_df_ADAUSDT.parquet  eval_df_BTCUSDT.parquet  eval_df_DOGEUSDT.parquet  eval_df_ETHUSDT.parquet  eval_df_LTCUSDT.parquet  eval_df_SOLUSDT.parquet  eval_df_XRPUSDT.parquet  features.md  getting_started.ipynb  holdout_split.csv  mhf-final.ipynb  mhf-maaz.ipynb  mhf-spread.ipynb  mhf-volume.ipynb  mhf.ipynb  model_k.ipynb  optimal_k_dev.csv  predictive_scheduler.py  pyproject.toml  random.py  requirements.txt  rl_execution-check.ipynb  (+7 more)
data/: README.md  simulate_walk_the_book.py
docs/: description.md  documentation.md  getting_started.md  mhf.md  mhf_summary.md  reference.md
execution_edge/: __init__.py  bps.py  candidates.py  data.py  evaluation.py  features.py  predictive_scheduler.py  preprocessing.py  schedules.py  selection.py  splits.py  walk_the_book.py
models/: DeepLOB.py  Seq2SeqAttention.py
notebooks/: 01_baselines.ipynb  02_deep_learning.ipynb  03_adaptive_scheduling.ipynb  04_direct_bps.ipynb  05_holdout_evaluation.ipynb  06_volume_and_spread_prediction.ipynb  deeplob_example.ipynb  getting_started.ipynb  mhf.ipynb
position_generation/: position_preds.ipynb  position_preds_comparison.ipynb  pyproject.toml  utils.py
results/: README.md
(+55 files in other folders)
