[project]
name = "ultramarin"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11, <3.12"

dependencies = [
    "fastparquet>=2025.12.0",
    "matplotlib>=3.10.7",
    "numpy>=2.3.4",
    "pandas>=2.3.3",
    "polars>=1.35.2",
    "pyarrow>=22.0.0",
    "pytest>=9.0.0",
    "scikit-learn>=1.8.0",
    "torch>=2.9.1",
    "tqdm>=4.67.1",
    "ipykernel>=6.29,<7",
    "ipython>=8.24,<9",
    "prompt_toolkit>=3.0.47,<3.0.50"
]

[dependency-groups]
dev = [
    "pytest>=9.0.0",
]