[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "execution-edge"
version = "1.0.0"
description = "Execution Edge: HFT Challenge code (LMU Data Science Practical WS 25/26)"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
    "pandas>=2.0",
    "polars>=0.19",
    "torch>=2.0",
    "scikit-learn>=1.3",
    "pyarrow>=14.0",
    "matplotlib>=3.7",
]

[tool.setuptools]
packages = ["execution_edge", "execution_edge.models"]
